# src/main/java/com/example/todoapp/dto/ErrorDto.java
@@ -1,0 +1,6 @@
+package com.example.todoapp.dto;
+
+public record ErrorDto(
+        String field,
+        String message
+) {}
