# src/main/java/com/example/todoapp/dto/TaskUpdateDto.java
@@ -1,0 +1,7 @@
+package com.example.todoapp.dto;
+
+public record TaskUpdateDto(
+        String title,
+        String description,
+        boolean done
+) {}
